--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,10 +49,10 @@ spring:
     url: jdbc:postgresql://${DB_URI}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
-    tomcat:
-      test-while-idle: true
-      test-on-borrow: true
-      validation-query: SELECT 1
+#    tomcat:
+#      test-while-idle: true
+#      test-on-borrow: true
+#      validation-query: SELECT 1
 
 
 application-version:
