--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>RTR statistic server</description>
     <properties>
         <java.version>11</java.version>
-        <swagger.version>3.0.0</swagger.version>
+        <swagger.version>2.9.2</swagger.version>
         <apache.commons.version>3.8.1</apache.commons.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.20</org.projectlombok.version>
@@ -59,7 +59,7 @@
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
+            <artifactId>springfox-swagger2 </artifactId>
             <version>${swagger.version}</version>
         </dependency>
         <dependency>
