--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-logback:
-  port: ${LOG_PORT}
-  host: ${LOG_HOST}
 app:
   defaultLanguage: en
 server:
@@ -43,6 +40,9 @@ auth0:
 application-version:
   host: rtr-api-dev
 
+logback:
+  port: 5000
+  host: http://127.0.0.1
 ---
 spring:
   profiles: dev
@@ -62,6 +62,9 @@ spring:
 application-version:
   host: rtr-api-dev
 
+logback:
+  port: ${LOG_PORT}
+  host: ${LOG_HOST}
 ---
 spring:
   profiles: test
@@ -81,6 +84,9 @@ spring:
 application-version:
   host: rtr-api-test
 
+logback:
+  port: ${LOG_PORT}
+  host: ${LOG_HOST}
 ---
 spring:
   profiles: staging
@@ -99,3 +105,7 @@ spring:
 
 application-version:
   host: rtr-api-staging
+
+logback:
+  port: ${LOG_PORT}
+  host: ${LOG_HOST}
