--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         <org.projectlombok.version>1.18.20</org.projectlombok.version>
         <auth0-spring-security-api.version>1.4.0</auth0-spring-security-api.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -102,7 +108,16 @@
             <artifactId>spymemcached</artifactId>
             <version>2.12.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.sett4</groupId>
+            <artifactId>jackson-dataformat-xlsx-lite</artifactId>
+            <version>2.9.9-1</version>
+        </dependency>
     </dependencies>
 
     <build>
