--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,9 @@ server:
   servlet:
     context-path: /RMBTStatisticServer
 spring:
+  http:
+    multipart:
+      enabled: false
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
