--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get install -y dnsutils
 
 RUN apt-get install -y libxml2-dev libxslt-dev libffi-dev libcairo2-dev libpango1.0-dev python-dev python3-pip
 RUN python3 -m pip install --upgrade pip && python3 -m pip install --upgrade Pillow
-RUN pip3 install WeasyPrint
+RUN pip3 install WeasyPrint==52.5
 
 RUN apt-get clean
 RUN rm -rf                        \
