initial war configuration

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>statistic-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>statistic-server</name>
+    <packaging>war</packaging>
     <description>RTR statistic server</description>
     <properties>
         <java.version>11</java.version>
@@ -19,6 +20,8 @@
         <apache.commons.version>3.8.1</apache.commons.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.20</org.projectlombok.version>
+        <auth0-spring-security-api.version>1.4.0</auth0-spring-security-api.version>
+        <start-class>at.rtr.rmbt.StatisticServerApplication</start-class>
     </properties>
     <repositories>
         <repository>
@@ -27,6 +30,11 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
