--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ app:
 server:
   port: 8080
   servlet:
-    context-path: /RMBTStatisticServer
+    context-path: /RMBTStatisticServer_new
 spring:
   http:
     multipart:
@@ -17,9 +17,9 @@ spring:
     poolSize: 20
     minIdle: 1
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://127.0.0.1:5431/rtr
-    username: rtr
-    password: password
+    url: jdbc:postgresql://${CONTROL_DB_HOST}:${CONTROL_DB_PORT}/${CONTROL_DB_NAME}
+    username: ${CONTROL_DB_USER}
+    password: ${CONTROL_DB_PASSWORD}
 
 #    tomcat:
 #      test-while-idle: true
@@ -104,9 +104,9 @@ spring:
     poolSize: 20
     minIdle: 1
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://${DB_URI}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    url: jdbc:postgresql://${CONTROL_DB_HOST}:${CONTROL_DB_PORT}/${CONTROL_DB_NAME}
+    username: ${CONTROL_DB_USER}
+    password: ${CONTROL_DB_PASSWORD}
     tomcat:
       test-while-idle: true
       test-on-borrow: true
