Clean file cache

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,9 @@
 app:
   defaultLanguage: en
+  fileCache:
+    cleaningJobRate: PT1H
+    path: /tmp/export
+    expirationTerm: 1
 server:
   port: 8080
   servlet:
