--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ app:
   fileCache:
     cleaningJobRate: PT24H
     path: /tmp/export
+    pdfPath: /tmp/pdf
     expirationTerm: 23
 server:
   port: 8080
