--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ app:
     # period for deletion of cache
     cleaningJobRate: PT24H # 24 hours period, ISO_8601
     path: /tmp/cache
-    pdfPath: /tmp/pdfcache
+    pdfPath: /tmp/pdf
     # delete files older than X hours
     expirationTerm: 23 # hours
 server:
