change context path

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ app:
 server:
   port: 8080
   servlet:
-    context-path: /RMBTStatisticServer_new
+    context-path: /RMBTStatisticServer
 spring:
   http:
     multipart:
