#1615 output atraster to pdf, still fit to one page

--- a/src/main/resources/SystemMessages.properties
+++ b/src/main/resources/SystemMessages.properties
@@ -217,6 +217,8 @@ key_ping_ndt = Latency (NDT)
 key_ndt_details_main = Details NDT (main)
 key_ndt_details_stat = Details NDT (stat)
 key_ndt_details_diag = Details NDT (diag)
+key_atraster100 = Austrian 100m grid ID
+key_atraster250 = Austrian 250m grid ID
 
 value_roaming_none = No
 value_roaming_national = National
