--- a/src/main/resources/SystemMessages.properties
+++ b/src/main/resources/SystemMessages.properties
@@ -219,6 +219,15 @@ key_ndt_details_stat = Details NDT (stat)
 key_ndt_details_diag = Details NDT (diag)
 key_atraster100 = Austrian 100m grid ID
 key_atraster250 = Austrian 250m grid ID
+key_temperature = Device temperature
+key_gkz = Austrian community ID
+key_community = Community
+key_locality = Cadastral community
+key_district = District
+key_province = Province
+key_dtm_level = DTM level
+key_network_mcc_mnc = Mobile network MCC-MNC
+key_sim_mcc_mnc = Home network MCC-MNC
 
 value_roaming_none = No
 value_roaming_national = National
