#1615 pdf export: add raw dl/ul/ping values

--- a/src/main/resources/SystemMessages.properties
+++ b/src/main/resources/SystemMessages.properties
@@ -228,6 +228,7 @@ key_province = Province
 key_dtm_level = DTM level
 key_network_mcc_mnc = Mobile network MCC-MNC
 key_sim_mcc_mnc = Home network MCC-MNC
+key_raw = raw value
 
 value_roaming_none = No
 value_roaming_national = National
