--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -25,5 +27,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: statisticserver-war
-          path: target/statistic-server-0.0.1-SNAPSHOT.war
+          path: target/statistic-server-*.war
           retention-days: 60
