git-id: delete tmp pom file

--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,7 @@
                         <dirtyQualifier>dirty</dirtyQualifier>
                     </strategy>
                     <generateTemporaryFile>false</generateTemporaryFile>
+                    <deleteTemporaryFile>true</deleteTemporaryFile>
                 </configuration>
             </plugin>
         </plugins>
