--- a/.github/workflows/git-act.yml
+++ b/.github/workflows/git-act.yml
@@ -7,14 +7,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'adopt'
           cache: maven
       - name: Get git info
-        run: mvn -B pl.project13.maven:git-commit-id-plugin:4.9.10:revision
+        run: mvn -B  io.github.git-commit-id:git-commit-id-maven-plugin:6.0.0:revision
       - name: Test
         run: >-
           mvn
