--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt'
+          distribution: 'corretto'
           cache: maven
       - name: Build war with Maven
         run: mvn -B -DskipTests=true compile package
