--- a/pom.xml
+++ b/pom.xml
@@ -91,14 +91,14 @@
             <version>${apache.commons.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-spatial</artifactId>
             <version>6.2.6.Final</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>30.1-jre</version>
+            <version>[32.0.0-android,)</version>
         </dependency>
         <dependency>
             <groupId>net.logstash.logback</groupId>
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20210307</version>
+            <version>[20231013,)</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>[2.14.0,)</version>
         </dependency>
         <dependency>
             <groupId>de.grundid.opendatalab</groupId>
