--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
     <description>RMBTStatisticServer</description>
     <properties>
         <java.version>17</java.version>
-        <org.projectlombok.version>1.18.28</org.projectlombok.version>
+        <org.projectlombok.version>1.18.42</org.projectlombok.version>
         <apache.commons.version>[3.18.0,)</apache.commons.version>
-        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <start-class>at.rtr.rmbt.StatisticServerApplication</start-class>
         <jackson-version>2.15.2</jackson-version>
     </properties>
